--- a/debian/ifmap-server/debian/changelog
+++ b/debian/ifmap-server/debian/changelog
@@ -1,11 +1,11 @@
-ifmap-server (0.3.2-1contrail1) precise; urgency=low
+ifmap-server (0.3.2-1contrail1) SERIES; urgency=low
 
   * Don't apply initial message segmentation patch; subscriptions
     fail when it is present.
 
  -- Pedro Marques <roque@juniper.net>  Fri, 2 Apr 2014 17:15:00 -0800
 
-ifmap-server (0.3.2-1) precise; urgency=low
+ifmap-server (0.3.2-1) SERIES; urgency=low
 
   * Initial release.
 
