--- a/debian/ifmap-server/debian/changelog
+++ b/debian/ifmap-server/debian/changelog
@@ -1,3 +1,9 @@
+ifmap-server (0.3.2-1contrail3+SERIES1) SERIES; urgency=medium
+
+  * Fix series for multi-distribution support
+
+ -- Filip Pytloun <filip@pytloun.cz>  Mon, 31 Oct 2016 13:52:01 +0100
+
 ifmap-server (0.3.2-1contrail2) precise; urgency=low
   * Launch line updated to allow log-rotation correctly
     (commit ab71b8d502fd6c34e439c82af931dd5a559a34d1)
